--- a/packages/plugin-unsplash/statics/styles/modal-arrow.scss
+++ b/packages/plugin-unsplash/statics/styles/modal-arrow.scss
@@ -1,7 +1,8 @@
-@import '~wix-rich-content-common/dist/statics/styles/mixins';
+@import "~wix-rich-content-common/dist/statics/styles/mixins";
 
 %modal_arrow {
-  border: solid #ccc;
+  border: solid 1px rgba(255, 255, 255, 0.25);
+  box-shadow: 1px 1px rgba(0, 0, 0, 0.1);
   border-width: 0 1px 1px 0;
   padding: 6px;
   position: absolute;
@@ -17,7 +18,7 @@
   @extend %modal_arrow;
   transform: rotate(45deg);
   bottom: -7px;
-  left: 70px;
+  left: 68px;
 }
 
 .modal_arrow_up {
@@ -25,4 +26,5 @@
   transform: rotate(-135deg);
   bottom: 364px;
   right: 70px;
+  display: none;
 }
