--- a/packages/plugin-unsplash/statics/styles/search-input-component.scss
+++ b/packages/plugin-unsplash/statics/styles/search-input-component.scss
@@ -8,7 +8,7 @@
 }
 .search_icon {
   position: absolute;
-  top: 15px;
-  left: 10px;
+  top: 14px;
+  left: 9px;
   z-index: 1;
 }
